style(login): fix eye icon missalign

--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -349,7 +349,6 @@ ion-input {
               .eye-button {
                 z-index: 200;
                 position: absolute;
-                top: 0px;
                 right: 10px;
 
                 .show-password {
